--- a/wlw-service.yaml
+++ b/wlw-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-   name: frontend
+   name: wlw-frontend
 spec:
    type: NodePort
    selector:
-       app: nginx
+       app: wlw
    ports:
-     - port: 80
-       targetPort: 80
+     - port: 8080
+       targetPort: 8080
        nodePort: 30003
